// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonDialpad /> with type bottom should render correctly 1`] = `
<InjectIntl(Button)
  id="mockId"
  onClick={[Function]}
  style={
    Array [
      Object {
        "borderBottom": "1px solid #E4E4E4",
        "borderLeft": "none",
        "borderRadius": 0,
        "borderRight": "1px solid #E4E4E4",
        "borderTop": "none",
        "color": "#4B4B4B",
        "fontSize": "22px",
        "padding": "17px 0",
        "width": "33.3%",
      },
      undefined,
      false,
      false,
    ]
  }
  text="mockText"
  type="secondary"
/>
`;

exports[`<ButtonDialpad /> with type bottomLeft should render correctly 1`] = `
<InjectIntl(Button)
  id="mockId"
  onClick={[Function]}
  style={
    Array [
      Object {
        "borderBottom": "1px solid #E4E4E4",
        "borderLeft": "none",
        "borderRadius": 0,
        "borderRight": "1px solid #E4E4E4",
        "borderTop": "none",
        "color": "#4B4B4B",
        "fontSize": "22px",
        "padding": "17px 0",
        "width": "33.3%",
      },
      Object {
        "borderRadius": "0 0 0 3px",
      },
      false,
      Object {
        "borderLeft": "1px solid #E4E4E4",
      },
    ]
  }
  text="mockText"
  type="secondary"
/>
`;

exports[`<ButtonDialpad /> with type bottomRight should render correctly 1`] = `
<InjectIntl(Button)
  id="mockId"
  onClick={[Function]}
  style={
    Array [
      Object {
        "borderBottom": "1px solid #E4E4E4",
        "borderLeft": "none",
        "borderRadius": 0,
        "borderRight": "1px solid #E4E4E4",
        "borderTop": "none",
        "color": "#4B4B4B",
        "fontSize": "22px",
        "padding": "17px 0",
        "width": "33.3%",
      },
      Object {
        "borderRadius": "0 0 3px 0",
      },
      false,
      false,
    ]
  }
  text="mockText"
  type="secondary"
/>
`;

exports[`<ButtonDialpad /> with type left should render correctly 1`] = `
<InjectIntl(Button)
  id="mockId"
  onClick={[Function]}
  style={
    Array [
      Object {
        "borderBottom": "1px solid #E4E4E4",
        "borderLeft": "none",
        "borderRadius": 0,
        "borderRight": "1px solid #E4E4E4",
        "borderTop": "none",
        "color": "#4B4B4B",
        "fontSize": "22px",
        "padding": "17px 0",
        "width": "33.3%",
      },
      Object {
        "borderLeft": "1px solid #E4E4E4",
      },
      false,
      false,
    ]
  }
  text="mockText"
  type="secondary"
/>
`;

exports[`<ButtonDialpad /> with type middle should render correctly 1`] = `
<InjectIntl(Button)
  id="mockId"
  onClick={[Function]}
  style={
    Array [
      Object {
        "borderBottom": "1px solid #E4E4E4",
        "borderLeft": "none",
        "borderRadius": 0,
        "borderRight": "1px solid #E4E4E4",
        "borderTop": "none",
        "color": "#4B4B4B",
        "fontSize": "22px",
        "padding": "17px 0",
        "width": "33.3%",
      },
      undefined,
      false,
      false,
    ]
  }
  text="mockText"
  type="secondary"
/>
`;

exports[`<ButtonDialpad /> with type right should render correctly 1`] = `
<InjectIntl(Button)
  id="mockId"
  onClick={[Function]}
  style={
    Array [
      Object {
        "borderBottom": "1px solid #E4E4E4",
        "borderLeft": "none",
        "borderRadius": 0,
        "borderRight": "1px solid #E4E4E4",
        "borderTop": "none",
        "color": "#4B4B4B",
        "fontSize": "22px",
        "padding": "17px 0",
        "width": "33.3%",
      },
      undefined,
      false,
      false,
    ]
  }
  text="mockText"
  type="secondary"
/>
`;

exports[`<ButtonDialpad /> with type top should render correctly 1`] = `
<InjectIntl(Button)
  id="mockId"
  onClick={[Function]}
  style={
    Array [
      Object {
        "borderBottom": "1px solid #E4E4E4",
        "borderLeft": "none",
        "borderRadius": 0,
        "borderRight": "1px solid #E4E4E4",
        "borderTop": "none",
        "color": "#4B4B4B",
        "fontSize": "22px",
        "padding": "17px 0",
        "width": "33.3%",
      },
      Object {
        "borderTop": "1px solid #E4E4E4",
      },
      Object {
        "borderTop": "1px solid #E4E4E4",
      },
      false,
    ]
  }
  text="mockText"
  type="secondary"
/>
`;

exports[`<ButtonDialpad /> with type topLeft should render correctly 1`] = `
<InjectIntl(Button)
  id="mockId"
  onClick={[Function]}
  style={
    Array [
      Object {
        "borderBottom": "1px solid #E4E4E4",
        "borderLeft": "none",
        "borderRadius": 0,
        "borderRight": "1px solid #E4E4E4",
        "borderTop": "none",
        "color": "#4B4B4B",
        "fontSize": "22px",
        "padding": "17px 0",
        "width": "33.3%",
      },
      Object {
        "borderRadius": "3px 0 0 0",
      },
      Object {
        "borderTop": "1px solid #E4E4E4",
      },
      Object {
        "borderLeft": "1px solid #E4E4E4",
      },
    ]
  }
  text="mockText"
  type="secondary"
/>
`;

exports[`<ButtonDialpad /> with type topRight should render correctly 1`] = `
<InjectIntl(Button)
  id="mockId"
  onClick={[Function]}
  style={
    Array [
      Object {
        "borderBottom": "1px solid #E4E4E4",
        "borderLeft": "none",
        "borderRadius": 0,
        "borderRight": "1px solid #E4E4E4",
        "borderTop": "none",
        "color": "#4B4B4B",
        "fontSize": "22px",
        "padding": "17px 0",
        "width": "33.3%",
      },
      Object {
        "borderRadius": "0 3px 0 0",
      },
      Object {
        "borderTop": "1px solid #E4E4E4",
      },
      false,
    ]
  }
  text="mockText"
  type="secondary"
/>
`;
